--- a/.github/workflows/unpublish.yml
+++ b/.github/workflows/unpublish.yml
@@ -112,7 +112,7 @@ jobs:
         
         echo "✅ Successfully set ${PACKAGE_NAME}@${NEW_LATEST} as latest"
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     - name: Verify latest tag update
       run: |-
         PACKAGE_NAME="${{ github.event.inputs.package_name }}"
@@ -137,7 +137,7 @@ jobs:
         echo "✅ Latest tag already updated to: ${{ github.event.inputs.new_latest_version }}"
     - run: npm unpublish ${{ github.event.inputs.package_name }}@${{ github.event.inputs.version }} --force
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     - name: Verify unpublish success
       run: |-
         VERSION="${{ github.event.inputs.version }}"
